--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="br.usjt.sin.progmulti.atividadessi2018">
+<manifest package="br.usjt.sin.progmulti.atividadessi2018"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-
+    <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
 
         <activity android:name=".ActivityA">
             <intent-filter>
@@ -17,13 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".ActivityB" />
-        <activity android:name=".ActivityC"></activity>
-        <activity android:name=".DialogActivity"
-            android:theme="@android:style/Theme.Holo.Dialog" >
-        </activity>
-
+        <activity android:name=".ActivityC" />
+        <activity android:theme="@android:style/Theme.Holo.Dialog" android:name=".DialogActivity"></activity>
     </application>
+
 
 </manifest>
